add some logging & update user service