@@ -1,8 +1,5 @@
 package com.example.websocket_app_test.controller;
 
-import com.example.websocket_app_test.auth.utils.SecurityUtils;
-import com.example.websocket_app_test.model.Chat;
-import com.example.websocket_app_test.model.ChatUser;
 import com.example.websocket_app_test.response.ChatResponse;
 import com.example.websocket_app_test.response.UserResponse;
 import com.example.websocket_app_test.service.ChatUserService;
@@ -13,10 +10,7 @@ import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RestController;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @RestController
@@ -26,21 +20,14 @@ public class UserController {
 
     @GetMapping("/get/user/chats")
     public List<ChatResponse> getChats() {
-        ChatUser user = SecurityUtils.getAuthenticatedUser();
-        List<Chat> chats = chatUserService.findChatUserByUsername(user.getUsername()).getChats();
-        log.info("chats from user: " + Arrays.toString(chats.toArray()));
-        if (chats != null) {
-            return chats.stream().map(Converter::chatConvertToResponse).toList();
-        }
-        else {
-            return new ArrayList<>();
-        }
+        return chatUserService.getChats();
     }
 
     @GetMapping("/get/user/{username}")
     public List<UserResponse> getUser(@PathVariable String username) {
-        return chatUserService.findAllUsersLike(username).stream()
+        return chatUserService.findAllUsersLike(username)
+                .stream()
                 .map(Converter::userConvertToResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
